# sandkasten

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SIGNING.md  deny.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
docs/: QUICKSTART.md
examples/: ai-agent.toml  api-server.toml  web-server.toml
fuzz/: Cargo.toml  README.md
fuzz/artifacts/profile_parse/: timeout-e91215db8a6707cbfac6b7c316fa6d40f8d6bd62
fuzz/fuzz_targets/: parse_endpoint.rs  profile_parse.rs
fuzz/seeds/parse_endpoint/: 3b996bdb  9a6a504a
fuzz/seeds/profile_parse/: ai-agent-keychain.toml  ai-agent.toml  builtin-dev.toml  builtin-electron.toml  builtin-self.toml  database.toml  worker.toml
packaging/homebrew/: SUBMISSION.md  sandkasten.rb
src/: cli.rs  config.rs  events.rs  explain.rs  hardware.rs  learn_core.rs  lib.rs  limits.rs  log.rs  main.rs  mocks.rs  net_files.rs  preflight.rs  presets.rs  signing.rs  snapshot.rs  spoofing.rs  templates.rs
src/linux/: isolate.rs  landlock_fs.rs  learn.rs  mod.rs  nftables.rs  seccomp_filter.rs
src/macos/: denials.rs  ffi.rs  learn.rs  mod.rs  sbpl.rs
src/ui/: index.html  mod.rs
swift-ui/: .gitignore  Package.swift  README.md  build-app.sh
swift-ui/Sources/SandkastenApp/: ContentView.swift  DebugLog.swift  DenialReview.swift  EventWatcher.swift  FormView.swift  MenuBarMenu.swift  Profile.swift  ProfileStore.swift  SandkastenApp.swift
swift-ui/icon/: AppIcon.icns  generate-icon.swift
templates/: browser.toml  dev.toml  electron.toml  minimal-cli.toml  network-client.toml  self.toml  strict.toml
