[package]
name = "sandkasten"
version = "0.4.2"
edition = "2021"
description = "Fast, kernel-enforced application sandbox for macOS and Linux"
license = "MIT OR Apache-2.0"
rust-version = "1.74"

[[bin]]
name = "sandkasten"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive", "wrap_help"] }
clap_complete = "4.6"
dirs = "6"
glob = "0.3"
libc = "0.2"
minisign-verify = "0.2"
serde = { version = "1", features = ["derive"] }
shellexpand = "3"
thiserror = "2"
tiny_http = "0.12"
toml = "1.1"

[target.'cfg(target_os = "linux")'.dependencies]
landlock = "0.4"
nix = { version = "0.31", features = ["fs", "mount", "sched", "process", "user", "hostname", "signal", "socket", "net"] }
seccompiler = "0.5"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"
